--- a/index.html
+++ b/index.html
@@ -10,19 +10,21 @@
 	<meta name="keywords" content="scss"/>
 	<meta name="description" content="Base level styles for you next project."/>
 
-  <script src="app.js"></script>
-
   <!-- <link rel="stylesheet" type="text/css" href="{{asset 'style.css'}}"/> -->
 
   <title>Sandbox</title>
 </head>
 <body>
-  <section class="js-outer">
-    <div class="js-inner">
-      <button class="js-button"></button>
-      <button class="js-button second"></button>
-      <div class="div"></div>
-    </div>
-  </section>
+  <form class="js-form">
+    <input type="text" name="firstName" class="js-input"/>
+    <input type="text" name="lastName" class="js-input"/>
+    <select class="js-input" name="age">
+      <option>1</option>
+      <option>2</option>
+      <option>3</option>
+    </select>
+  </form>
+
+  <script src="app.js"></script>
 </body>
 </html>
