Multiple params object creation, forms

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       <option>2</option>
       <option>3</option>
     </select>
+    <input type="text" name="company" class="js-company"/>
+    <input type="text" name="address" class="js-address"/>
   </form>
 
   <script src="app.js"></script>
