--- a/index.html
+++ b/index.html
@@ -16,15 +16,8 @@
 </head>
 <body>
   <form class="js-form">
-    <input type="text" name="firstName" class="js-input"/>
-    <input type="text" name="lastName" class="js-input"/>
-    <select class="js-input" name="age">
-      <option>1</option>
-      <option>2</option>
-      <option>3</option>
-    </select>
-    <input type="text" name="company" class="js-company"/>
-    <input type="text" name="address" class="js-address"/>
+    <label>Email</label>
+    <input type="text" name="email" class="js-email"/>
   </form>
 
   <script src="app.js"></script>
