Add README and clean up code a bit

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 </head>
 <body>
   <form class="js-form">
-    <label>Email</label>
-    <input type="text" name="email" class="js-email"/>
+    <label>Type an Integer</label>
+    <input type="text" name="email" class="js-integer"/>
   </form>
 
   <script src="app.js"></script>
