Convert to event management sandbox

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <title>Sandbox</title>
 </head>
 <body>
-  <form class="js-form">
-    <label>Type an Integer</label>
-    <input type="text" name="email" class="js-integer"/>
-  </form>
+  <div class="js-outer">
+    <button class="js-button">Trigger</button>
+    <button>No Trigger</button>
+  </div>
 
   <script src="app.js"></script>
 </body>
