Events and bucket working

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 <body>
   <div class="js-outer">
     <button class="js-button">Trigger</button>
+    <button class="js-button-2">Trigger</button>
+    <button class="js-button-3">Trigger</button>
+    <button class="js-button-4">Trigger</button>
     <button>No Trigger</button>
   </div>
 
