--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 	<meta name="keywords" content="scss"/>
 	<meta name="description" content="Base level styles for you next project."/>
 
+	<meta prefix="og: http://ogp.me/ns#" property="og:description" content="DESCRIPTION"/>
+  <meta prefix="og: http://ogp.me/ns#" property="og:site_name" content="NAME"/>
+  <meta prefix="og: http://ogp.me/ns#" property="og:title" content="TITLE" />
+  <meta prefix="og: http://ogp.me/ns#" property="og:image" content="IMAGE" />
+  <meta prefix="og: http://ogp.me/ns#" property="og:url" content="URL" />
+
   <!-- <link rel="stylesheet" type="text/css" href="{{asset 'style.css'}}"/> -->
 
   <title>Sandbox</title>
 </head>
 <body>
-  <div class="js-outer">
-    <button class="js-button">Trigger</button>
-    <button class="js-button-2">Trigger</button>
-    <button class="js-button-3">Trigger</button>
-    <button class="js-button-4">Trigger</button>
-    <button>No Trigger</button>
-  </div>
+  <a href="#0" data-social="twitter">Twitter</a>
 
   <script src="app.js"></script>
 </body>
