Working social, little rough

--- a/index.html
+++ b/index.html
@@ -8,20 +8,26 @@
 	<meta name="author" content="Eric Bailey">
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<meta name="keywords" content="scss"/>
-	<meta name="description" content="Base level styles for you next project."/>
+	<meta name="description" content="A javascript sandbox, by Eric Bailey."/>
 
-	<meta prefix="og: http://ogp.me/ns#" property="og:description" content="DESCRIPTION"/>
-  <meta prefix="og: http://ogp.me/ns#" property="og:site_name" content="NAME"/>
-  <meta prefix="og: http://ogp.me/ns#" property="og:title" content="TITLE" />
-  <meta prefix="og: http://ogp.me/ns#" property="og:image" content="IMAGE" />
-  <meta prefix="og: http://ogp.me/ns#" property="og:url" content="URL" />
+	<meta prefix="og: http://ogp.me/ns#" property="og:description" content="A javascript sandbox, by Eric Bailey."/>
+  <meta prefix="og: http://ogp.me/ns#" property="og:site_name" content="Sandbox"/>
+  <meta prefix="og: http://ogp.me/ns#" property="og:title" content="Sandbox" />
+  <meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://s3.amazonaws.com/StartupStockPhotos/uploads/20160503/3.jpg" />
+  <meta prefix="og: http://ogp.me/ns#" property="og:url" content="http://estrattonbailey.com" />
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Sandbox">
+  <meta name="twitter:description" content="A javascript sandbox, by Eric Bailey.">
+  <meta name="twitter:image" content="https://s3.amazonaws.com/StartupStockPhotos/uploads/20160503/3.jpg">
 
   <!-- <link rel="stylesheet" type="text/css" href="{{asset 'style.css'}}"/> -->
 
   <title>Sandbox</title>
 </head>
 <body>
-  <a href="#0" data-social="twitter">Twitter</a>
+  <a href="#0" data-social='twitter {"hashtags":"nofilter,test"}'>Twitter</a>
+  <a href="#0" data-social="facebook">Facebook</a>
 
   <script src="app.js"></script>
 </body>
