--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
   <title>Sandbox</title>
 </head>
 <body>
-  <a href="#0" data-social='twitter {"hashtags":"nofilter,test"}'>Twitter</a>
+  <a href="#0" data-social='twitter {"hashtags":"nofilter,test","via":"estrattonbailey"}'>Twitter</a>
   <a href="#0" data-social="facebook">Facebook</a>
+  <a href="#0" data-social="pinterest">Pinterest</a>
 
   <script src="app.js"></script>
 </body>
