--- a/index.html
+++ b/index.html
@@ -3,26 +3,29 @@
 <head>
 	<meta charset="UTF-8"/>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<link rel="canonical" href="">
+	<link rel="canonical" href="http://estrattonbailey.com/svbstrate-site">
 
-	<meta name="author" content="Eric Bailey">
+  <meta name="author" content="@estrattonbailey">
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
-	<meta name="keywords" content="scss"/>
-	<meta name="description" content="Base level styles for you next project."/>
+  <meta name="keywords" content="A simple, scalable SCSS base-layer."/>
+  <meta name="description" content="A simple, scalable SCSS base-layer."/>
 
-	<meta prefix="og: http://ogp.me/ns#" property="og:description" content="DESCRIPTION"/>
-  <meta prefix="og: http://ogp.me/ns#" property="og:site_name" content="NAME"/>
-  <meta prefix="og: http://ogp.me/ns#" property="og:title" content="TITLE" />
-  <meta prefix="og: http://ogp.me/ns#" property="og:image" content="IMAGE" />
-  <meta prefix="og: http://ogp.me/ns#" property="og:url" content="URL" />
+	<!-- Icons -->
+	<link rel="icon" type="image/png" href="assets/icons/favicon.png">
 
-  <!-- <link rel="stylesheet" type="text/css" href="{{asset 'style.css'}}"/> -->
+	<!-- Open Graph data -->
+	<meta prefix="og: http://ogp.me/ns#" property="og:description" content="A simple, scalable SCSS base-layer."/>
+  <meta prefix="og: http://ogp.me/ns#" property="og:site_name" content="A simple, scalable SCSS base-layer."/>
+  <meta prefix="og: http://ogp.me/ns#" property="og:title" content="Svbstrate - A simple scalable SCSS base-layer." />
+  <meta prefix="og: http://ogp.me/ns#" property="og:image" content="/" />
+  <meta prefix="og: http://ogp.me/ns#" property="og:url" content="http://estrattonbailey.com/svbstrate-site" />
 
-  <title>Sandbox</title>
+  <title>Svbstrate - A simple scalable SCSS base-layer.</title>
 </head>
-<body>
-  <a href="#0" data-social="twitter">Twitter</a>
+<body class="">
 
-  <script src="app.js"></script>
+  <div data-module="'param' 'param2' -- util | module"></div>
+
+  <script src="./dist/assets/main.js"></script>
 </body>
 </html>
