--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
 <body class="">
 
   <div data-module="'param' 'param2' -- util | module"></div>
+  <div data-module="'param' 'param2' -- util | module2, 'param' 'param2' -- util | module3"></div>
+  <div data-module="'param' -- module2"></div>
+  <div data-module="module3"></div>
+  <div data-module="module3,module4"></div>
+
+  <div data-component="'param' 'param2' -- util | component"></div>
 
   <script src="./dist/assets/main.js"></script>
 </body>
