--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 </head>
 <body class="">
 
-  <div data-module="'param' 'param2' -- util | module"></div>
-  <div data-module="'param' 'param2' -- util | module2, 'param' 'param2' -- util | module3"></div>
-  <div data-module="'param' -- module2"></div>
-  <div data-module="module3"></div>
-  <div data-module="module3,module4"></div>
+  <!-- <div data-module="'param' 'param2' -- util | module"></div> -->
+  <div data-module="'param' 'param2' -- util | module2 #ben, 'param' 'param2' -- util | module3 #eric"></div>
+  <!-- <div data-module="'param' -- module2"></div> -->
+  <!-- <div data-module="module3"></div> -->
+  <!-- <div data-module="module3,module4"></div> -->
 
-  <div data-component="'param' 'param2' -- util | component"></div>
+  <!-- <div data-component="'param' 'param2' -- util | component #overlay"></div> -->
 
   <script src="./dist/assets/main.js"></script>
 </body>
