Browserify v1, can't find modules

--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
 
   <div data-component="'param' 'param2' -- util | component"></div>
 
-  <script src="./dist/assets/main.js"></script>
+  <script src="./dist/assets/main.min.js"></script>
 </body>
 </html>
